--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-poise = "0.5.5"
+poise = { version = "0.5.5" }
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
+
