--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 poise = { version = "0.5.5" }
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
-
+chrono = "0.4.26"
+sqlite = "0.30.4"
