--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.26"
 poise = { version = "0.5.5" }
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
-chrono = "0.4.26"
-sqlite = "0.30.4"
+rusqlite = { version = "0.29", features = ["bundled"] }
