Feat(database): Central database object created.
This allows for cog like functionality in discord.py where an instance
of a database connection is shared across all commands. Doing this meant
changing the database handler from sqlite to sqlx.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 chrono = "0.4.26"
 poise = { version = "0.5.5" }
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
-rusqlite = { version = "0.29", features = ["bundled"] }
+sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "chrono" ] }
