WIP(reminder): Add pending matches to a delay queue.
Pending matches are now added to a delay queue, however, that
information is not being used. That will need to be implemented.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4.26"
-poise = { version = "0.5.5" }
-sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "chrono" ] }
-
 # Async stuff
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "time"] }
+tokio-util = { version = "0.7.8", features = ["time"] }
+
 futures = "0.3.28"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 async-recursion = "1.0.4"
+
+chrono = "0.4.26"
+poise = { version = "0.5.5" }
+sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "chrono" ] }
